Fix firebase config

--- a/src/pages/Login.css
+++ b/src/pages/Login.css
@@ -1,4 +1,4 @@
-.main__login {
+/* .main__login {
   min-height: 500px;
   margin: auto;
 }
@@ -16,4 +16,4 @@
 
 .main__form > h1 {
   text-align: center;
-}
+} */
