Fix resetPassword and PrivateRoute

--- a/src/pages/Login.css
+++ b/src/pages/Login.css
@@ -1,19 +1,23 @@
-.main__longin {
+.longin {
   overflow: hidden;
-  background-color: ghostwhite;
   position: relative;
   margin: -10px;
 }
 
-.main__login__paper {
+.login__paper {
   text-align: center;
   padding: 20px;
   margin: 20px auto;
   max-width: 400px;
   height: auto;
+
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
 }
 
-.main__login__paper > h1 {
+.login__paper > h1 {
   -webkit-user-select: none;
   -moz-user-select: none;
   -ms-user-select: none;
@@ -24,7 +28,7 @@
 
 } */
 
-.main__login__form > Button {
+.login__form > Button {
   margin-top: 20px;
   margin-bottom: 20px;
 }
