--- a/src/components/InputBox.css
+++ b/src/components/InputBox.css
@@ -33,9 +33,16 @@
 
 
 .inputBox__form__bottom {
+  display: flex;
+  flex-direction: row;
   margin-top: 8px;
   margin-left: auto;
   margin-right: 0px;
+}
+
+.inputBox__form__bottom > caption {
+  margin-right: 20px;
+  text-align: center;
 }
 
 .inputBox__form__bottom > Button {
