Post are connected to firestore

--- a/src/components/InputBox.css
+++ b/src/components/InputBox.css
@@ -40,7 +40,7 @@
   margin-right: 0px;
 }
 
-.inputBox__form__bottom > caption {
+.inputBox__form__bottom > h6 {
   margin-right: 20px;
   text-align: center;
 }
